css/default.css
/* ... */
 iframe{display:block;}
 abbr,acronym{border:0;font-variant:normal;}
 del{text-decoration:line-through;}
 address,caption,cite,code,dfn,em,th,var {font-style:normal;font-weight:500;}
 ol,ul {list-style:none;}
 caption,th{text-align:left;}
 h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:500;}
 q:before,q:after {content:'';}
 sup{vertical-align:text-top;}
 sub{vertical-align:text-bottom;}

 .clearfix:after {visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0;}
 .clearfix{zoom:1;}
 body .hide{display:none;}
 .left,.right{display:inline;}
 .left{float:left;}
 .right{float:right;}
 table th, table td {
  padding: 8px;
  line-height: 20px;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
table {
  margin-bottom: 20px;
  max-width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  display: table;
  border-color: gray;
}

/***********default settings**********/
body {font-family: "微软雅黑","Arial","Helvetica","sans-serif";font-size:16px;}
a {color:#4A75B5;text-decoration:none;outline:none;}
a:hover {text-decoration:underline}
a.external {padding-right:13px;background:url('/img/icons.gif') no-repeat right 1px;}
a.external:hover {background-position:right -15px;}
.entry-title,.entry-title a {font-size:30px;font-weight:bold;margin-bottom:6px;color:#000;text-align:center;word-wrap: break-word;}
.entry-title a:hover {text-decoration:none;}
.entry-date {text-align:center;color:#999;margin-bottom:30px;margin-top:20px;font-size:14px;}

h2 {font-size:22px;font-weight:bold;margin-bottom:25px;}
h3 {font-size:18px;font-weight:bold;margin-bottom:25px;}
h4,h5,h6 {font-weight:bold;margin-bottom:15px;}
p {margin-bottom:30px;line-height:1.8em;}
code {background:#eee;border:1px solid #ccc;padding:0 5px;font-family:"Courier";line-height:14px;font-size:14px;word-wrap:break-word; }
pre {background-color:#000;padding:15px;overflow:auto;margin-bottom:40px;word-wrap:normal;font-size:14px;border: 1px solid #eee;-webkit-border-radius: 4px 4px 4px 4px;-moz-border-radius: 4px 4px 4px 4px;border-radius: 4px 4px 4px 4px;color:#b9bdb6;margin-top:-20px; }
h4+pre, h3+pre { margin-top:20px; }
pre code{background-color:transparent;border:none;padding:10px;word-wrap:normal;overflow-x: }
pre ol{margin-left:25px;list-style-type:decimal;}

/************layout style*****************/
#content {width:1060px;margin:90px auto 60px;min-height:400px;height:auto !important;height:400px; }


/****************entry style**************/
.sidenav { width:245px; background:#fff; float:right; padding:20px; margin-bottom:35px; box-shadow:0 1px 4px #ccc; }
.sidenav h1 { font-weight:bold; color:#222; margin-bottom:15px; }
.sidenav h2 { font-size:18px; color:#333; margin-bottom:15px; }
.sidenav h3 { font-size:16px; color:#333; margin-bottom:15px; }
.sidenav ul { margin-bottom:15px; }
.sidenav li { margin-bottom:12px; word-break: break-all;}
.sidenav a { color:#555; font-size:14px; display:block;}
.sidenav .rss {font-size: 16px; color:#333;}

.entry{margin-bottom:80px;width:780px; float:left; background:#fff; padding:30px; box-shadow:0 2px 6px #ccc; min-height: 440px;}
.entry ul{margin-bottom:25px;margin-left:25px;}
.entry p+ul {margin-top:-20px;}
.entry ul li{margin-bottom:5px;list-style:disc;line-height:2.0em;}
.entry ol{margin-bottom:25px;margin-left:25px;}
.entry ol li{margin-bottom:5px;list-style:decimal;line-height:2.0em;}
.entry blockquote{padding: 10px 10px;margin: 0 0 20px;font-size: 16px;border-left: 5px solid #eee}
.entry blockquote p{margin-bottom: 0px;line-height: 1.5em;}
.entry div#bq-about p{margin-bottom: 1.5em;line-height: 1.5em;margin-left: 0.8em;}
.entry div#bq-about-edu p{margin-bottom: 0.5em;line-height: 1.5em;margin-left: 0.8em;}
.entry .about-title{font-size:27px;font-weight:bold;margin-bottom:15px;color:#000;text-align:left;word-wrap: break-word;}
.entry img{max-width:670px;display:block;margin:10px auto; border-width: 2px;border-color: #f5f5f5;border-radius: 1px;}
.entry div.post-tag a {font-size: 14px;font-weight: normal;}
.entry div.post-tag span.label {background-color: #f1f1f1; }

.index-content .aside {
  position: fixed;
  top: 0;
  left: 0;
  width: 30%;
  height: 100%;
  max-width: 500px;
  background:#000;
  box-shadow:inset -1px 0 0 rgba(0,0,0,0.3);
  background-size:cover;
  background-position:50% 50%;
}
.col1 .aside{
  background-image:url('/img/aside3.jpg');
}
.col2 .aside{
  background-image:url('/img/aside8.jpg');
}
.col3 .aside{
  background-image:url('/img/aside5.jpg');
}
.col4 .aside{
  background-image:url('/img/aside4.jpg');
}
.col5 .aside{
  background-image:url('/img/aside2.jpg');
}
.index-content .section { margin-left:30%; padding-top:80px; padding-right:10%; ;}

.index-content .artical-list { width:70%; margin:0 auto; }
.index-content .artical-list li { margin-bottom:70px; font-size: 18px}
.index-content h2 { font-size:20px; margin-bottom:15px; word-break: break-all;}
.index-content h2 a { color:#444 }
.index-content h2 a:hover { color:#E50053; text-decoration:none; }
.index-content .title-desc {color:#999;font-size:14px;line-height:1.6em;}

.index-content .artical-cate { width:70%; margin:0 auto; }
.index-content .artical-cate li { display:inline-block; *float:left; zoom:1; font-size:18px; width:18%; cursor:pointer; }
.index-content .artical-cate li a,
.index-content .artical-cate li a:visited { display:inline-block; zoom:1; color:#000; width:100%; }
.index-content .artical-cate li a:hover { text-decoration:none; }
.index-content .artical-cate li.on span{ color:red; }

.index-content .cate-bar { height:3px; width:70%; margin:0 auto;margin-bottom:100px; }
.index-content #cateBar { display:inline-block; zoom:1; height:3px; background:red; position:relative; width:0; }

/***************Wiki Style*****************/
.wiki h2{cursor:pointer;}
.wiki ul{margin-left:30px;margin-bottom:20px;list-style:disc}
.wiki ul li{margin-bottom:5px;}
.wiki ul ul{list-style:circle;margin-top:10px;margin-bottom:10px;}
/* ... */

